Updated tests to pass after refactoring